<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework</string>
 	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_pizza_order">Нова нарачка</string>
	<string name="pizza_size">Големина на пица:</string>
	<string name="pizza_type">Тип на пица:</string>
	<string name="background_color">Боја на позадина:</string>
	<string name="pizza_size_small">Мала</string>
	<string name="pizza_size_medium">Средна</string>
	<string name="pizza_size_big">Голема</string>
	<string name="pizza_type_capricioza">Капричоза</string>
	<string name="pizza_type_margarita">Маргарита</string>
	<string name="pizza_type_vegetarijana">Вегетаријана</string>
	<string name="additional">Додатоци:</string>
	<string name="extraCheese">Екстра сирење</string>
	<string name="ketchup">Кечап</string>
	<string name="mayo">Мајонез</string>
	<string name="make_order">Направи нарачка</string>
	<string name="choose_contact">Избери контакт</string>
	<string name="do_order">Нарачај</string>
	<string name="send_order">Испрати нарачка</string>
	<string name="start_creating_order">Креирајте ја Вашата нарачка по желба</string>
	<string name="continue_creating_order">Продолжете со креирање на Вашата нарачка</string>
	<string name="minimum_goals">Минимум голови</string>
	<string name="football_club">Клуб</string>
	<string name="menu_preferences">Поставки</string>
	
	
	<string-array name="background_colors_array">
        <item>Зелена</item>
        <item>Сина</item>
        <item>Црвена</item>
    </string-array>
   
</resources>
