<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jmm_homework.MakeOrderActivity"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical">

	<TextView
	    android:id="@+id/textViewMinimumGoals"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/minimum_goals"/>
	
	<Spinner
	    android:id="@+id/spinnerMinimumGoals"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<TextView
	    android:id="@+id/textViewFootballClub"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/football_club"/>
	
	<Spinner
	    android:id="@+id/spinnerFootballClub"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<Button android:id="@+id/okButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ok"
		/>
		<Button android:id="@+id/cancelButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel"
		/>
	</LinearLayout>
</LinearLayout>